--- a/www/views/main.haml
+++ b/www/views/main.haml
@@ -10,15 +10,15 @@
     .ui.ten.wide.column
       :documentation
 
-        Welcome to the PCAWG-Scout. This portal will help to explore the data
+        Welcome to the PCAWG-Scout. This portal will help explore the data
         produced by the PCAWG project. It's organized as a collection of
         reports centered around entities and lists of entities: donors,
-        cohorts, genes, etc. These reports all computed on-demand and cached,
+        cohorts, genes, etc. These reports are computed on-demand and cached,
         and some even take parameters. Please consult the help page for more
         information.
         
         You may also find tips on some parts of the site with additional
-        information. These tips are green dots with a question mark inside, and
+        information. These tips are green dots with a question mark inside
         appear at the top right part of a page section, and are revealed when
         hovering over that section; look, there is one down there!
         
@@ -39,4 +39,5 @@
               %span.user< jennifer.jennings
               %span.at_addr oicr.on.ca 
               for further information.
+
 = partial_render('main/cohort_selection')
